Fixed dark mode for navbar

--- a/src/app/shared/components/navbar/navbar.component.css
+++ b/src/app/shared/components/navbar/navbar.component.css
@@ -8,11 +8,11 @@ header {
 	right: 0;
 	top: 0;
 	height: 100px;
-	background: rgba(255, 255, 255, 0.24);
-	box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+	background: var(--nav-bkg-color);
+	box-shadow: var(--nav-box-shadow);
 	backdrop-filter: blur(10px);
 	-webkit-backdrop-filter: blur(4.8px);
-	border: 1px solid rgba(255, 255, 255, 0.32);
+	border: 1px solid var(--nav-border-color);
 	z-index: 997;
 }
 
@@ -53,7 +53,7 @@ ul {
 }
 
 a {
-	color: var(--black);
+	color: var(--text-color);
 	text-decoration: none;
 	transition: border-bottom 1s ease;
 	display: inline-block;
@@ -75,7 +75,7 @@ a::after {
 	content: "";
 	width: 0;
 	height: 2px;
-	background-color: var(--black);
+	background-color: var(--text-color);
 	position: absolute;
 	left: 0;
 	bottom: 0;
